[gd_scene load_steps=15 format=2]

[ext_resource path="res://graph/inventaire.png" type="Texture" id=1]
[ext_resource path="res://graph/AmaticSC-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://graph/menu3.png" type="Texture" id=3]
[ext_resource path="res://graph/menu2.png" type="Texture" id=4]
[ext_resource path="res://graph/Amatic-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://images/map1e.png" type="Texture" id=6]
[ext_resource path="res://Scènes/MENU.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 70
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "ctrl",
"speed": 5.0
} ]

[sub_resource type="Animation" id=5]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("fondu:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=6]
size = 120
outline_size = 2
outline_color = Color( 0.607843, 0.227451, 0.227451, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 80
outline_size = 2
outline_color = Color( 0.580392, 0.278431, 0.278431, 1 )
font_data = ExtResource( 2 )

[node name="MENU" type="Node2D"]
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="bout_jouer" type="RichTextLabel" parent="."]
margin_left = 671.0
margin_top = 317.0
margin_right = 1094.0
margin_bottom = 422.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Jouer"
text = "Jouer"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="bout_ctrl" type="RichTextLabel" parent="."]
margin_left = 651.634
margin_top = 581.099
margin_right = 1112.63
margin_bottom = 718.099
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Contrôles"
text = "Contrôles"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="bout_quitter" type="RichTextLabel" parent="."]
show_behind_parent = true
margin_left = 661.0
margin_top = 866.0
margin_right = 1114.0
margin_bottom = 974.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Quitter"
text = "Quitter"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="bout_retour" type="RichTextLabel" parent="."]
visible = false
show_behind_parent = true
margin_left = 1254.13
margin_top = 845.594
margin_right = 1707.13
margin_bottom = 953.594
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Retour"
text = "Retour"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.771, 1.771 )
z_index = -100
frames = SubResource( 4 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="fondu" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 6 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/change_scène" = SubResource( 5 )

[node name="controles" type="Node2D" parent="."]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="controles"]
position = Vector2( 527.113, 468.687 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="controles"]
margin_left = 332.126
margin_top = 90.0928
margin_right = 910.126
margin_bottom = 505.093
custom_fonts/font = SubResource( 6 )
text = "Z  ,   Q  ,   S   , D"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="controles"]
margin_left = 449.008
margin_top = 574.024
margin_right = 1027.01
margin_bottom = 989.024
custom_fonts/font = SubResource( 6 )
text = "Echap"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="controles"]
margin_left = 1012.99
margin_top = 344.925
margin_right = 1595.99
margin_bottom = 507.925
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "Utiliser son inventaire"
text = "Utiliser son inventaire"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="controles"]
margin_left = 1018.64
margin_top = 109.084
margin_right = 1675.64
margin_bottom = 261.084
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "Se déplacer"
text = "Se déplacer"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="controles"]
margin_left = 1024.79
margin_top = 593.015
margin_right = 1681.79
margin_bottom = 745.015
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "Quitter le jeu"
text = "Quitter le jeu"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="bout_jouer" to="." method="_on_bout_jouer_mouse_entered"]
[connection signal="mouse_exited" from="bout_jouer" to="." method="_on_bout_jouer_mouse_exited"]
[connection signal="mouse_entered" from="bout_ctrl" to="." method="_on_bout_ctrl_mouse_entered"]
[connection signal="mouse_exited" from="bout_ctrl" to="." method="_on_bout_ctrl_mouse_exited"]
[connection signal="mouse_entered" from="bout_quitter" to="." method="_on_bout_quitter_mouse_entered"]
[connection signal="mouse_exited" from="bout_quitter" to="." method="_on_bout_quitter_mouse_exited"]
[connection signal="mouse_entered" from="bout_retour" to="." method="_on_bout_retour_mouse_entered"]
[connection signal="mouse_exited" from="bout_retour" to="." method="_on_bout_retour_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_change_scne_timeout"]
